--- a/css/navigation.css
+++ b/css/navigation.css
@@ -139,7 +139,8 @@ body{
     color: var(--Golden_Dream);
 }
 
-.bottom{
+.bottom-nav{
+    position: absolute;
     bottom: 0;
     width: 100%;
 }
@@ -163,10 +164,10 @@ body{
 }
 
 .menuToggle{
-    position:left;
+    position: absolute;
     top:20px;
     right:20px;
-    width:85px;
+    width: 50px;
     height:50px;
     background: #31a4ff;
     z-index: 1000;
@@ -197,12 +198,12 @@ body{
     transform: translateY(9px);
     transition: 0.5s;
 }
-.menuToggle.active::before{
+.menuToggle.active-menu::before{
     transform: translateY(0px) rotate(45deg);
     box-shadow: 0 0 0 #fff;
 }
 
-.menuToggle.active::after{
+.menuToggle.active-menu::after{
     transform: translateY(0px) rotate(-45deg);
 }
 
@@ -211,4 +212,8 @@ body{
 }
 .logo img{
     margin-top: 10px;
+}
+
+.active-menu{
+    background: #31a4ff;
 }
