--- a/css/login.css
+++ b/css/login.css
@@ -48,12 +48,20 @@ main#main{
     padding-bottom: 2rem;
 }
 .logo {
-    margin: auto;
-    font-size: 8rem;
-    background: white;
-    padding: .5em 0.8em;
-    border-radius: 50% 50%;
-    color: #000000b3;
+    /* Ensure the logo div is appropriately sized */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.logo img {
+    /* Make sure the image fits within the logo div */
+    width: 100%;
+    height: auto; /* Maintain aspect ratio */
+    object-fit: cover; /* Cover the entire container while maintaining aspect ratio */
 }
 
 .logo-container{
