--- a/css/personal.css
+++ b/css/personal.css
@@ -3,11 +3,12 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    max-height: 780px;/* Changed */
 }
 
 .container {
     max-width: 100%;
-    height: auto;
+    overflow-x: auto;/* Changed */
     border-radius: 10px;
     display: flex;
     flex-wrap: wrap;
@@ -84,6 +85,8 @@
     border-radius: 5px;
     cursor: pointer;
     align-self: flex-start;
+    margin-bottom: 20px;/* Changed */
+
 }
 
 .btn-primary:hover {
